<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size20"
        android:paddingRight="@dimen/size20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_5_1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size30"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/img_website"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_5_2" />

        <TextView
            android:textSize="@dimen/size12"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_5_3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size30"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/img_appinstall"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_5_4" />

        <TextView
            android:textSize="@dimen/size12"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_5_5" />

    </LinearLayout>

</LinearLayout>