<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_black"
    android:paddingLeft="@dimen/size10"
    android:paddingRight="@dimen/size10">

    <RelativeLayout android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size10"
        android:paddingRight="@dimen/size10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:textColor="@color/color_white"
            android:id="@id/txt_title_introduce1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size18"
            android:text="@string/txt_title_priview01"
            android:layout_centerHorizontal="true" />

        <TextView
            android:textSize="@dimen/size12"
            android:textColor="@color/color_white"
            android:id="@id/txt_content_introduce1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/txt_title_priview02"
            android:layout_below="@id/txt_title_introduce1"
            android:layout_centerHorizontal="true" />

        <Button
            android:textSize="@dimen/size14"
            android:textColor="@color/color_white"
            android:id="@id/btn_get_create"
            android:background="@drawable/boder_button"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_marginTop="50.0dip"
            android:text="@string/txt_get_creadit"
            android:layout_below="@id/txt_content_introduce1"
            android:layout_centerHorizontal="true"
            android:onClick="loginFb"/>
    </RelativeLayout>
</LinearLayout>