<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size20"
        android:paddingRight="@dimen/size20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size30"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/img_chart"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <TextView
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_6_1" />

        <TextView
            android:textSize="@dimen/size12"
            android:textColor="@color/color_black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_introduce_6_2" />

        <Button
            android:textSize="@dimen/size14"
            android:textColor="@color/color_white"
            android:id="@id/btn_get_create"
            android:background="@drawable/boder_button"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_marginTop="@dimen/size20"
            android:layout_marginBottom="@dimen/size20"
            android:text="@string/txt_get_creadit"
            android:layout_below="@id/txt_content_introduce1"
            android:layout_centerHorizontal="true"
            android:onClick="loginFb"/>

    </LinearLayout>

</LinearLayout>