<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/color_black"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/img_discovered"
        android:paddingLeft="@dimen/size20"
        android:paddingRight="@dimen/size20"
        android:layout_width="fill_parent"
        android:layout_height="300.0dip">

        <TextView
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:textColor="@color/color_white"
            android:gravity="center"
            android:id="@id/txt_title_introduce1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size18"
            android:text="@string/txt_title_priview01"
            android:layout_centerHorizontal="true" />

        <TextView
            android:textSize="@dimen/size12"
            android:textColor="@color/color_white"
            android:id="@id/txt_content_introduce1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/txt_title_priview02" />

        <Button
            android:textSize="@dimen/size14"
            android:textColor="@color/color_white"
            android:id="@id/btn_get_create"
            android:background="@drawable/boder_button"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_marginTop="50.0dip"
            android:text="@string/txt_get_creadit"
            android:layout_below="@id/txt_content_introduce1"
            android:layout_centerHorizontal="true"
            android:onClick="loginFb"/>

    </LinearLayout>

    <LinearLayout
        android:gravity=""
        android:orientation="vertical"
        android:background="#ffdcd9d9"
        android:paddingLeft="@dimen/size20"
        android:paddingRight="@dimen/size20"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:textSize="@dimen/size30"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/txt_signin" />

        <TextView
            android:textSize="@dimen/size16"
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:layout_marginBottom="@dimen/size20"
            android:text="@string/txt_mail_or_phone" />

        <EditText
            android:textSize="@dimen/size16"
            android:textColor="@color/color_black"
            android:id="@id/edt_Email"
            android:background="@drawable/test_change_text"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5.0dip"
            android:inputType="textEmailAddress" />

        <TextView
            android:textSize="@dimen/size16"
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:layout_marginBottom="@dimen/size20"
            android:text="@string/txt_pass" />

        <EditText
            android:textSize="@dimen/size16"
            android:textColor="@color/color_black"
            android:id="@id/edt_Password"
            android:background="@drawable/test_change_text"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5.0dip"
            android:inputType="textPassword" />

        <androidx.cardview.widget.CardView
            android:id="@id/card_login"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginBottom="@dimen/size20"
            android:elevation="7.0dip"
            app:cardBackgroundColor="#ff8a8686"
            app:cardCornerRadius="@dimen/size30">

            <TextView
                android:textSize="@dimen/size16"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/txt_signin" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size20">

            <Button
                android:textSize="@dimen/size14"
                android:textColor="@color/color_white"
                android:id="@id/btn_get_create1"
                android:background="@drawable/boder_button"
                android:layout_width="wrap_content"
                android:layout_height="35.0dip"
                android:text="@string/txt_get_creadit"
                android:layout_below="@id/txt_content_introduce1"
                android:onClick="loginFb"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>